--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+
+    <button id="btn">Click here to enter size</button>
+
     <div id="grid"></div>
     <script src="javascript.js"></script>
 </body>
