--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
-    <title>Etch-a-Sketch</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="styles.css">
+        <script src="javascript.js" defer></script>
+        <title>Etch-a-Sketch</title>
+    </head>
 
-<body>
+    <body onload="createGrid()">
 
-    <button id="btn">Click here to enter size</button>
+        <div id="header">Etch-a-Sketch</div>
 
-    <div id="grid"></div>
-    <script src="javascript.js"></script>
-</body>
+        <div id="grid"></div>
+
+        <div class="slidecontainer">
+            <button id="clear">Clear</button>
+            <input type="range" min="8" max="70" value="16" class="slider" id="myRange">
+            <div class="output"></div>
+        </div>
+
+        <footer>Copyright ©
+            <script>
+              document.write(new Date().getFullYear())
+            </script>
+            Louis Atkinson
+        </footer>
+
+    </body>
 
 </html>
